[feat]Challenge: Mostly challenge fix, including tower and blossom, also partial of dungeons
- Modify how blossom worktop entity is created
- Allows blossom to cache to server, and do daily reset
- Added more blossom refresh type enums
- Changed challenge triggers in WorldChallenge to Map for easier manipulation
- Moved timezone to game container
- Fixed dungeon that doesn't have exits point, will send player back to where they were before entering dungeon
- Added loading script error logging
- Fixed Spiral abyss. About 90% of its functionality is working.
- Send PacketPlayerEnterSceneNotify with more details.
- Fixed dungeon reward statue gadget.
- Fixed dungeon entries and exits teleportation
- Fixed showing dungeon entries in handbook and domain interface for normal dungeons and quest entries
- Added weekly boss discount and refresh implementation
- Refactored Scene.java
- Fixed the problem where replaced groups keep respawn and de-spawn on tick
- Updated implementation for blossom challenges
- Updated implementation for challenge related codes. All types of challenges are implemented except for CHALLENGE_TRIGGER2_AVOID_TRIGGER1.