@@ -3,12 +3,14 @@ package emu.grasscutter.game.activity.trialavatar;
 import com.esotericsoftware.reflectasm.ConstructorAccess;
 import emu.grasscutter.Grasscutter;
 import emu.grasscutter.data.GameData;
-import emu.grasscutter.data.excels.RewardData;
+import emu.grasscutter.data.excels.ActivityWatcherData;
+import emu.grasscutter.data.excels.TrialAvatarActivityDataData;
 import emu.grasscutter.game.activity.ActivityHandler;
 import emu.grasscutter.game.activity.ActivityWatcher;
 import emu.grasscutter.game.activity.DefaultWatcher;
 import emu.grasscutter.game.activity.GameActivity;
 import emu.grasscutter.game.activity.PlayerActivityData;
+import emu.grasscutter.game.dungeons.settle_listeners.TrialAvatarDungeonSettleListener;
 import emu.grasscutter.game.player.Player;
 import emu.grasscutter.game.props.ActionReason;
 import emu.grasscutter.game.props.ActivityType;
@@ -18,44 +20,42 @@ import emu.grasscutter.server.packet.send.PacketActivityInfoNotify;
 import emu.grasscutter.server.packet.send.PacketScenePlayerLocationNotify;
 import emu.grasscutter.utils.JsonUtils;
 import lombok.Getter;
-import lombok.Setter;
+import lombok.NonNull;
 import lombok.val;
-import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Stream;
+import java.util.Optional;
 
 @GameActivity(ActivityType.NEW_ACTIVITY_TRIAL_AVATAR)
 public class TrialAvatarActivityHandler extends ActivityHandler {
-    @Getter @Setter private int selectedTrialAvatarIndex;
+    @Getter private int selectedTrialAvatarIndex;
+    private static final WatcherTriggerType triggerType = WatcherTriggerType.TRIGGER_FINISH_CHALLENGE;
+    private static final TrialAvatarDungeonSettleListener TRIAL_AVATAR_DUNGEON_SETTLE_LISTENER = new TrialAvatarDungeonSettleListener();
 
     @Override
-    public void onInitPlayerActivityData(@NotNull PlayerActivityData playerActivityData) {
-        TrialAvatarPlayerData trialAvatarPlayerData = TrialAvatarPlayerData.create(getActivityConfigItem().getScheduleId());
-
-        playerActivityData.setDetail(trialAvatarPlayerData);
+    public void onInitPlayerActivityData(@NonNull PlayerActivityData playerActivityData) {
+        playerActivityData.setDetail(TrialAvatarPlayerData.create(getActivityConfigItem().getScheduleId()));
     }
 
     @Override
-    public void onProtoBuild(PlayerActivityData playerActivityData, @NotNull ActivityInfo.Builder activityInfo) {
-        TrialAvatarPlayerData trialAvatarPlayerData = getTrialAvatarPlayerData(playerActivityData);
-
-        activityInfo.setTrialAvatarInfo(trialAvatarPlayerData.toProto());
+    public void onProtoBuild(PlayerActivityData playerActivityData, @NonNull ActivityInfo.Builder activityInfo) {
+        activityInfo.setTrialAvatarInfo(getTrialAvatarPlayerData(playerActivityData).toProto());
     }
 
     @Override
-    public void initWatchers(@NotNull Map<WatcherTriggerType, ConstructorAccess<?>> activityWatcherTypeMap) {
-        var watcherType = activityWatcherTypeMap.get(WatcherTriggerType.TRIGGER_FINISH_CHALLENGE);
-        ActivityWatcher watcher = watcherType == null ? new DefaultWatcher() : (ActivityWatcher) watcherType.newInstance();
+    public void initWatchers(@NonNull Map<WatcherTriggerType, ConstructorAccess<?>> activityWatcherTypeMap) {
+        val watcher = Optional.ofNullable(activityWatcherTypeMap.get(triggerType))
+            .map(ConstructorAccess::newInstance).filter(ActivityWatcher.class::isInstance)
+            .map(ActivityWatcher.class::cast).orElse(new DefaultWatcher());
         watcher.setActivityHandler(this);
-        getWatchersMap().computeIfAbsent(WatcherTriggerType.TRIGGER_FINISH_CHALLENGE, k -> new ArrayList<>());
-        getWatchersMap().get(WatcherTriggerType.TRIGGER_FINISH_CHALLENGE).add(watcher);
+
+        getWatchersMap().computeIfAbsent(triggerType, k -> new ArrayList<>()).add(watcher);
     }
 
-    public TrialAvatarPlayerData getTrialAvatarPlayerData(@NotNull PlayerActivityData playerActivityData) {
+    public TrialAvatarPlayerData getTrialAvatarPlayerData(@NonNull PlayerActivityData playerActivityData) {
         if (playerActivityData.getDetail() == null || playerActivityData.getDetail().isBlank()) {
             onInitPlayerActivityData(playerActivityData);
             playerActivityData.save();
@@ -64,49 +64,50 @@ public class TrialAvatarActivityHandler extends ActivityHandler {
         return JsonUtils.decode(playerActivityData.getDetail(), TrialAvatarPlayerData.class);
     }
 
+    private Optional<TrialAvatarActivityDataData> getActivityData(int trialAvatarIndexId) {
+        return Optional.ofNullable(GameData.getTrialAvatarActivityDataByAvatarIndex(trialAvatarIndexId));
+    }
+
     public int getTrialActivityDungeonId(int trialAvatarIndexId) {
-        val data = GameData.getTrialAvatarActivityDataByAvatarIndex(trialAvatarIndexId);
-        return data != null ? data.getDungeonId() : -1;
+        return getActivityData(trialAvatarIndexId).map(TrialAvatarActivityDataData::getDungeonId).orElse(-1);
     }
 
     public List<String> getTriggerParamList() {
-        val data = GameData.getTrialAvatarActivityDataByAvatarIndex(getSelectedTrialAvatarIndex());
-        return data != null ? data.getTriggerConfig().getParamList() : Collections.emptyList();
+        return getActivityData(this.selectedTrialAvatarIndex).map(TrialAvatarActivityDataData::getTriggerConfig)
+            .map(ActivityWatcherData.WatcherTrigger::getParamList).orElse(List.of());
     }
 
-    public boolean enterTrialDungeon(@NotNull Player player, int trialAvatarIndexId, int enterPointId) {
+    public boolean enterTrialDungeon(@NonNull Player player, int trialAvatarIndexId, int enterPointId) {
         // TODO, not sure if this will cause problem in MP, since we are entering trial activity dungeon
         player.sendPacket(new PacketScenePlayerLocationNotify(player.getScene())); // official does send this
 
         if (!player.getServer().getDungeonSystem().enterDungeon(
             player,
             enterPointId,
-            getTrialActivityDungeonId(trialAvatarIndexId))) return false;
+            getTrialActivityDungeonId(trialAvatarIndexId),
+            TRIAL_AVATAR_DUNGEON_SETTLE_LISTENER)) return false;
 
-        setSelectedTrialAvatarIndex(trialAvatarIndexId);
+        this.selectedTrialAvatarIndex = trialAvatarIndexId;
         return true;
     }
 
     public List<Integer> getBattleAvatarsList() {
-        val activityData = GameData.getTrialAvatarActivityDataByAvatarIndex(getSelectedTrialAvatarIndex());
-        if (activityData == null || activityData.getBattleAvatarsList().isBlank()) return List.of();
-
-        return Stream.of(activityData.getBattleAvatarsList().split(",")).map(Integer::parseInt).toList();
+        return getActivityData(this.selectedTrialAvatarIndex).map(TrialAvatarActivityDataData::getBattleAvatarsList)
+            .filter(avatarStr -> !avatarStr.isBlank()).map(avatarStr -> avatarStr.split(",")).stream()
+            .flatMap(Arrays::stream).map(Integer::parseInt).toList();
     }
 
-    public boolean getReward(@NotNull Player player, int trialAvatarIndexId) {
+    public boolean getReward(@NonNull Player player, int trialAvatarIndexId) {
         val playerActivityData = player.getActivityManager()
             .getPlayerActivityDataByActivityType(ActivityType.NEW_ACTIVITY_TRIAL_AVATAR);
 
-        if(playerActivityData.isEmpty()){
-            return false;
-        }
+        if (playerActivityData.isEmpty()) return false;
 
-        TrialAvatarPlayerData trialAvatarPlayerData = getTrialAvatarPlayerData(playerActivityData.get());
-        TrialAvatarPlayerData.RewardInfoItem rewardInfo = trialAvatarPlayerData.getRewardInfo(trialAvatarIndexId);
+        val trialAvatarPlayerData = getTrialAvatarPlayerData(playerActivityData.get());
+        val rewardInfo = trialAvatarPlayerData.getRewardInfo(trialAvatarIndexId);
         if (rewardInfo == null) return false;
 
-        RewardData rewardParam = GameData.getRewardDataMap().get(rewardInfo.getRewardId());
+        val rewardParam = GameData.getRewardDataMap().get(rewardInfo.getRewardId());
         if (rewardParam == null) return false;
 
         player.getInventory().addItemParamDatas(rewardParam.getRewardItemList(), ActionReason.TrialAvatarActivityFirstPassReward);
@@ -117,14 +118,14 @@ public class TrialAvatarActivityHandler extends ActivityHandler {
     }
 
     public void setPassDungeon(PlayerActivityData playerActivityData) {
-        TrialAvatarPlayerData trialAvatarPlayerData = getTrialAvatarPlayerData(playerActivityData);
-        TrialAvatarPlayerData.RewardInfoItem rewardInfo = trialAvatarPlayerData.getRewardInfo(getSelectedTrialAvatarIndex());
+        val trialAvatarPlayerData = getTrialAvatarPlayerData(playerActivityData);
+        val rewardInfo = trialAvatarPlayerData.getRewardInfo(this.selectedTrialAvatarIndex);
         if (rewardInfo == null) return;
 
         rewardInfo.setPassedDungeon(true);
         playerActivityData.setDetail(trialAvatarPlayerData);
         playerActivityData.save();
-        Player player = Grasscutter.getGameServer().getPlayerByUid(playerActivityData.getUid());
+        val player = Grasscutter.getGameServer().getPlayerByUid(playerActivityData.getUid());
         player.sendPacket(new PacketActivityInfoNotify(toProto(playerActivityData, player.getActivityManager().getConditionExecutor())));
     }
 }
