@@ -5,22 +5,18 @@ import emu.grasscutter.data.GameData;
 import emu.grasscutter.data.GameDepot;
 import emu.grasscutter.data.binout.SceneNpcBornEntry;
 import emu.grasscutter.data.binout.routes.Route;
-import emu.grasscutter.data.excels.CodexAnimalData;
-import emu.grasscutter.data.excels.ItemData;
-import emu.grasscutter.data.excels.MonsterData;
-import emu.grasscutter.data.excels.SceneData;
-import emu.grasscutter.data.excels.WorldLevelData;
+import emu.grasscutter.data.excels.*;
 import emu.grasscutter.data.server.Grid;
 import emu.grasscutter.game.avatar.Avatar;
 import emu.grasscutter.game.dungeons.DungeonManager;
-import emu.grasscutter.game.dungeons.DungeonSettleListener;
 import emu.grasscutter.game.dungeons.challenge.WorldChallenge;
 import emu.grasscutter.game.dungeons.enums.DungeonPassConditionType;
+import emu.grasscutter.game.dungeons.settle_listeners.DungeonSettleListener;
 import emu.grasscutter.game.entity.*;
 import emu.grasscutter.game.entity.gadget.GadgetWorktop;
 import emu.grasscutter.game.inventory.GameItem;
-import emu.grasscutter.game.managers.blossom.BlossomManager;
 import emu.grasscutter.game.player.Player;
+import emu.grasscutter.game.player.TeamInfo;
 import emu.grasscutter.game.props.*;
 import emu.grasscutter.game.quest.QuestGroupSuite;
 import emu.grasscutter.game.world.SpawnDataEntry.GridBlockId;
@@ -56,20 +52,20 @@ import java.util.stream.Collectors;
 public class Scene {
     @Getter private final World world;
     @Getter private final SceneData sceneData;
-    @Getter private final List<Player> players;
-    @Getter private final Map<Integer, GameEntity> entities;
-    @Getter private final Map<Integer, GameEntity> weaponEntities;
-    @Getter private final Set<SpawnDataEntry> spawnedEntities;
-    @Getter private final Set<SpawnDataEntry> deadSpawnedEntities;
-    @Getter private final Set<SceneGroup> loadedGroups;
-    @Getter private final Set<Integer> loadedGroupIds;
-    @Getter private final BlossomManager blossomManager;
-    private final HashSet<Integer> unlockedForces;
+    @Getter private final List<Player> players = new CopyOnWriteArrayList<>();
+    @Getter private final Map<Integer, GameEntity> entities = new ConcurrentHashMap<>();
+    @Getter private final Map<Integer, GameEntity> weaponEntities = new ConcurrentHashMap<>();
+    private final Set<SpawnDataEntry> spawnedEntities = ConcurrentHashMap.newKeySet();
+    @Getter private final Set<SpawnDataEntry> deadSpawnedEntities = ConcurrentHashMap.newKeySet();
+    @Getter private final Set<SceneGroup> loadedGroups = ConcurrentHashMap.newKeySet();
+    @Getter private final Set<Integer> loadedGroupIds = ConcurrentHashMap.newKeySet();
+    private final Set<Integer> replacedGroup = ConcurrentHashMap.newKeySet();
+    private final HashSet<Integer> unlockedForces = new HashSet<>();
     private final List<Runnable> afterLoadedCallbacks = new ArrayList<>();
     private final long startWorldTime;
     @Getter @Setter DungeonManager dungeonManager;
     @Getter Int2ObjectMap<Route> sceneRoutes;
-    private Set<SpawnDataEntry.GridBlockId> loadedGridBlocks;
+    private Set<SpawnDataEntry.GridBlockId> loadedGridBlocks = new HashSet<>();
     @Getter @Setter private boolean dontDestroyWhenEmpty;
 
     @Getter @Setter private int autoCloseTime;
@@ -78,11 +74,12 @@ public class Scene {
 
     @Getter private final SceneScriptManager scriptManager;
     @Getter @Setter private WorldChallenge challenge;
-    @Getter private List<DungeonSettleListener> dungeonSettleListeners;
-    @Getter @Setter private int prevScene; // Id of the previous scene
+    @Getter private final List<DungeonSettleListener> dungeonSettleListeners = new ArrayList<>();
+    @Getter @Setter private int prevScene; // id of the previous scene
     @Getter @Setter private int prevScenePoint;
     @Getter @Setter private int killedMonsterCount;
-    private Set<SceneNpcBornEntry> npcBornEntrySet;
+    @Getter @Setter private int killChestCount;
+    private Set<SceneNpcBornEntry> npcBornEntrySet = ConcurrentHashMap.newKeySet();
     @Getter private boolean finishedLoading = false;
     @Getter private int tickCount = 0;
     @Getter private boolean isPaused = false;
@@ -92,27 +89,15 @@ public class Scene {
     public Scene(World world, SceneData sceneData) {
         this.world = world;
         this.sceneData = sceneData;
-        this.players = new CopyOnWriteArrayList<>();
-        this.entities = new ConcurrentHashMap<>();
-        this.weaponEntities = new ConcurrentHashMap<>();
 
         this.prevScene = 3;
         this.sceneRoutes = GameData.getSceneRoutes(getId());
 
-        startWorldTime = world.getWorldTime();
+        this.startWorldTime = world.getWorldTime();
 
-        this.spawnedEntities = ConcurrentHashMap.newKeySet();
-        this.deadSpawnedEntities = ConcurrentHashMap.newKeySet();
-        this.loadedGroups = ConcurrentHashMap.newKeySet();
-        this.loadedGroupIds = new HashSet<>();
-        this.loadedGridBlocks = new HashSet<>();
-        this.npcBornEntrySet = ConcurrentHashMap.newKeySet();
         this.scriptManager = new SceneScriptManager(this);
-        this.blossomManager = new BlossomManager(this);
-        this.unlockedForces = new HashSet<>();
 
         //Create scene entity
-
         this.sceneEntity = new EntityScene(this);
     }
 
@@ -121,18 +106,18 @@ public class Scene {
     }
 
     public SceneType getSceneType() {
-        return getSceneData().getSceneType();
+        return sceneData.getSceneType();
     }
 
     public int getPlayerCount() {
-        return this.getPlayers().size();
+        return this.players.size();
     }
 
     public GameEntity getEntityById(int id) {
-        if (id == 0x13800001) return sceneEntity;
-        else if (id == getWorld().getLevelEntityId()) return getWorld().getEntity();
+        if (id == 0x13800001) return this.sceneEntity;
+        else if (id == this.world.getLevelEntityId()) return this.world.getEntity();
 
-        var teamEntityPlayer = players.stream().filter(p -> p.getTeamManager().getEntity().getId() == id).findAny();
+        val teamEntityPlayer = this.players.stream().filter(p -> p.getTeamManager().getEntity().getId() == id).findAny();
         if (teamEntityPlayer.isPresent()) return teamEntityPlayer.get().getTeamManager().getEntity();
 
         var entity = this.entities.get(id);
@@ -175,7 +160,7 @@ public class Scene {
     }
 
     public int getSceneTime() {
-        return (int) (getWorld().getWorldTime() - startWorldTime);
+        return (int) (world.getWorldTime() - startWorldTime);
     }
 
     public int getSceneTimeSeconds() {
@@ -183,16 +168,11 @@ public class Scene {
     }
 
     public void addDungeonSettleObserver(DungeonSettleListener dungeonSettleListener) {
-        if (dungeonSettleListeners == null) {
-            dungeonSettleListeners = new ArrayList<>();
-        }
-        dungeonSettleListeners.add(dungeonSettleListener);
+        this.dungeonSettleListeners.add(dungeonSettleListener);
     }
 
     public void triggerDungeonEvent(DungeonPassConditionType conditionType, int... params) {
-        if (dungeonManager == null) {
-            return;
-        }
+        if (dungeonManager == null) return;
         dungeonManager.triggerEvent(conditionType, params);
     }
 
@@ -202,21 +182,17 @@ public class Scene {
 
     public synchronized void addPlayer(Player player) {
         // Check if player already in
-        if (getPlayers().contains(player)) {
-            return;
-        }
+        if (this.players.contains(player)) return;
 
         // Remove player from prev scene
-        if (player.getScene() != null) {
-            player.getScene().removePlayer(player);
-        }
+        if (player.getScene() != null) player.getScene().removePlayer(player);
 
         // Add
-        getPlayers().add(player);
-        player.setSceneId(this.getId());
+        this.players.add(player);
+        player.setSceneId(getId());
         player.setScene(this);
 
-        this.setupPlayerAvatars(player);
+        setupPlayerAvatars(player);
     }
 
     public synchronized void removePlayer(Player player) {
@@ -226,33 +202,30 @@ public class Scene {
         }
 
         // Remove player from scene
-        getPlayers().remove(player);
+        this.players.remove(player);
         player.setScene(null);
 
         // Remove player avatars
-         this.removePlayerAvatars(player);
+        removePlayerAvatars(player);
 
         // Remove player gadgets
-        for (EntityBaseGadget gadget : player.getTeamManager().getGadgets()) {
-            this.removeEntity(gadget);
-        }
+        player.getTeamManager().getGadgets().forEach(this::removeEntity);
 
         // Deregister scene if not in use
-        if (this.getPlayerCount() <= 0 && !this.dontDestroyWhenEmpty) {
-            this.getScriptManager().onDestroy();
-            this.getWorld().deregisterScene(this);
+        if (getPlayerCount() <= 0 && !this.dontDestroyWhenEmpty) {
+            this.scriptManager.onDestroy();
+            this.world.deregisterScene(this);
         }
-        this.saveGroups();
+        saveGroups();
     }
 
     private void setupPlayerAvatars(@NotNull Player player) {
         // Clear entities from old team
-        List<EntityAvatar> activeTeam = player.getTeamManager().getActiveTeam();
+        val activeTeam = player.getTeamManager().getActiveTeam();
         activeTeam.clear();
-        Optional.ofNullable(player.getTeamManager().getCurrentTeamInfo())
-            .ifPresent(info -> info.getAvatars().forEach(avatarId -> activeTeam.add(
-                new EntityAvatar(player.getScene(), player.getAvatars().getAvatarById(avatarId))
-            )));
+        Optional.ofNullable(player.getTeamManager().getCurrentTeamInfo()).map(TeamInfo::getAvatars).stream()
+            .flatMap(List::stream).map(player.getAvatars()::getAvatarById)
+            .map(avatar -> new EntityAvatar(player.getScene(), avatar)).forEach(activeTeam::add);
     }
 
     private synchronized void removePlayerAvatars(@NotNull Player player) {
@@ -260,33 +233,32 @@ public class Scene {
     }
 
     public void spawnPlayer(Player player) {
-        var teamManager = player.getTeamManager();
-        if (this.isInScene(teamManager.getCurrentAvatarEntity())) {
-            return;
+        val teamManager = player.getTeamManager();
+        val curAvatarEntity = teamManager.getCurrentAvatarEntity();
+        if (isInScene(curAvatarEntity)) return;
+
+        if (curAvatarEntity.getFightProperty(FightProperty.FIGHT_PROP_CUR_HP) <= 0f) {
+            curAvatarEntity.setFightProperty(FightProperty.FIGHT_PROP_CUR_HP, 1f);
         }
 
-        if (teamManager.getCurrentAvatarEntity().getFightProperty(FightProperty.FIGHT_PROP_CUR_HP) <= 0f) {
-            teamManager.getCurrentAvatarEntity().setFightProperty(FightProperty.FIGHT_PROP_CUR_HP, 1f);
-        }
-
-        this.addEntity(teamManager.getCurrentAvatarEntity());
+        addEntity(curAvatarEntity);
 
         // Notify the client of any extra skill charges
         teamManager.getActiveTeam().stream().map(EntityAvatar::getAvatar).forEach(Avatar::sendSkillExtraChargeMap);
     }
 
     private void addEntityDirectly(GameEntity entity) {
-        getEntities().put(entity.getId(), entity);
+        this.entities.put(entity.getId(), entity);
         entity.onCreate(); // Call entity create event
     }
 
     public synchronized void addEntity(GameEntity entity) {
-        this.addEntityDirectly(entity);
-        this.broadcastPacket(new PacketSceneEntityAppearNotify(entity));
+        addEntityDirectly(entity);
+        broadcastPacket(new PacketSceneEntityAppearNotify(entity));
     }
 
     public synchronized void addEntityToSingleClient(Player player, GameEntity entity) {
-        this.addEntityDirectly(entity);
+        addEntityDirectly(entity);
         player.sendPacket(new PacketSceneEntityAppearNotify(entity));
 
     }
@@ -321,14 +293,14 @@ public class Scene {
     }
 
     public void updateEntity(GameEntity entity, VisionType type) {
-        this.broadcastPacket(new PacketSceneEntityUpdateNotify(Collections.singletonList(entity), type));
+        this.broadcastPacket(new PacketSceneEntityUpdateNotify(List.of(entity), type));
     }
 
     private static <T> List<List<T>> chopped(List<T> list, final int L) {
-        List<List<T>> parts = new ArrayList<List<T>>();
+        List<List<T>> parts = new ArrayList<>();
         final int N = list.size();
         for (int i = 0; i < N; i += L) {
-            parts.add(new ArrayList<T>(
+            parts.add(new ArrayList<>(
                 list.subList(i, Math.min(N, i + L)))
             );
         }
@@ -336,12 +308,9 @@ public class Scene {
     }
 
     public synchronized void addEntities(Collection<? extends GameEntity> entities, VisionType visionType) {
-        if (entities == null || entities.isEmpty()) {
-            return;
-        }
-        for (GameEntity entity : entities) {
-            this.addEntityDirectly(entity);
-        }
+        if (entities == null || entities.isEmpty()) return;
+
+        entities.forEach(this::addEntityDirectly);
 
         for(val l : chopped(new ArrayList<>(entities), 100)) {
             this.broadcastPacket(new PacketSceneEntityAppearNotify(l, visionType));
@@ -365,7 +334,7 @@ public class Scene {
     }
 
     public void removeEntity(GameEntity entity) {
-        this.removeEntity(entity, VisionType.VISION_TYPE_DIE);
+        removeEntity(entity, VisionType.VISION_TYPE_DIE);
     }
 
     public synchronized void removeEntity(GameEntity entity, VisionType visionType) {
@@ -381,16 +350,16 @@ public class Scene {
             .map(this::removeEntityDirectly)
             .filter(Objects::nonNull)
             .toList();
-        if (toRemove.size() > 0) {
+        if (!toRemove.isEmpty()) {
             this.broadcastPacket(new PacketSceneEntityDisappearNotify(toRemove, visionType));
         }
     }
 
     public synchronized void replaceEntity(EntityAvatar oldEntity, EntityAvatar newEntity) {
-        this.removeEntityDirectly(oldEntity);
-        this.addEntityDirectly(newEntity);
-        this.broadcastPacket(new PacketSceneEntityDisappearNotify(oldEntity, VisionType.VISION_TYPE_REPLACE));
-        this.broadcastPacket(new PacketSceneEntityAppearNotify(newEntity, VisionType.VISION_TYPE_REPLACE, oldEntity.getId()));
+        removeEntityDirectly(oldEntity);
+        addEntityDirectly(newEntity);
+        broadcastPacket(new PacketSceneEntityDisappearNotify(oldEntity, VisionType.VISION_TYPE_REPLACE));
+        broadcastPacket(new PacketSceneEntityAppearNotify(newEntity, VisionType.VISION_TYPE_REPLACE, oldEntity.getId()));
     }
 
     public void showOtherEntities(Player player) {
@@ -402,27 +371,24 @@ public class Scene {
 
     public void handleAttack(AttackResult result) {
         //GameEntity attacker = getEntityById(result.getAttackerId());
-        GameEntity target = getEntityById(result.getDefenseId());
-        ElementType attackType = ElementType.getTypeByValue(result.getElementType());
+        val target = getEntityById(result.getDefenseId());
+        val attackType = ElementType.getTypeByValue(result.getElementType());
+        if (target == null) return;
 
-        if (target == null) {
-            return;
-        }
+        // God-mode check
+        if (target instanceof EntityAvatar entityAvatar) {
+            if (entityAvatar.getPlayer().isInGodMode()) return;
 
-        // Godmode check
-        if (target instanceof EntityAvatar) {
-            if (((EntityAvatar) target).getPlayer().isInGodMode()) {
-                return;
+            if (result.getDamage() != result.getDamageShield()) { // when avatar actually have a shield
+                //TODO check
+                Optional.ofNullable(this.challenge).ifPresent(c ->
+                    c.onDamageMonsterOrShield(getEntityById(result.getAttackerId()), result.getDamageShield() - result.getDamage()));
             }
         }
-
-        // Sanity check
-//        if (target instanceof EntityMonster monsterTarget) {
-//            monsterTarget.damage(result.getDamage(), result.getAttackerId(), attackType,
-//                ElementReactionType.getTypeByValue(result.getAmplifyReactionType()));
-//            return;
-//        }
         target.damage(result.getDamage(), result.getAttackerId(), attackType);
+        if (target instanceof EntityGadget gadget) {
+            Optional.ofNullable(this.challenge).ifPresent(c -> c.onGadgetDamage(gadget));
+        }
     }
 
     public void killEntity(GameEntity target) {
@@ -432,9 +398,7 @@ public class Scene {
     public void killEntity(GameEntity target, int attackerId) {
         GameEntity attacker = null;
 
-        if (attackerId > 0) {
-            attacker = getEntityById(attackerId);
-        }
+        if (attackerId > 0) attacker = getEntityById(attackerId);
 
         if (attacker != null) {
             // Check codex
@@ -449,39 +413,44 @@ public class Scene {
         }
 
         // Packet
-        this.broadcastPacket(new PacketLifeStateChangeNotify(attackerId, target, LifeState.LIFE_DEAD));
+        broadcastPacket(new PacketLifeStateChangeNotify(attackerId, target, LifeState.LIFE_DEAD));
 
-        // Reward drop
-        var world = this.getWorld();
-        if (target instanceof EntityMonster monster && this.getSceneType() != SceneType.SCENE_DUNGEON) {
-            if (monster.getMetaMonster() != null && !world.getServer().getDropSystem().handleMonsterDrop(monster)) {
-                Grasscutter.getLogger().debug("Can not solve monster drop: drop_id = {}, drop_tag = {}. Falling back to legacy drop system.", monster.getMetaMonster().drop_id, monster.getMetaMonster().drop_tag);
-                getWorld().getServer().getDropSystemLegacy().callDrop(monster);
-            }
-        }
 
         // Remove entity from world
-        this.removeEntity(target);
+        removeEntity(target);
 
         // Death event
         target.onDeath(attackerId);
-        triggerDungeonEvent(DungeonPassConditionType.DUNGEON_COND_KILL_MONSTER_COUNT, ++killedMonsterCount);
+        // Reward drop
+        if (target instanceof EntityMonster monster) {
+            if (getSceneType() != SceneType.SCENE_DUNGEON && attacker != null) {
+                if (monster.getMetaMonster() != null && !world.getServer().getDropSystem().handleMonsterDrop(monster)) {
+                    Grasscutter.getLogger().warn("Can not solve monster drop: drop_id = {}, drop_tag = {}. Falling back to legacy drop system.", monster.getMetaMonster().drop_id, monster.getMetaMonster().drop_tag);
+                    world.getServer().getDropSystemLegacy().callDrop(monster);
+                }
+            }
+            triggerDungeonEvent(DungeonPassConditionType.DUNGEON_COND_KILL_MONSTER_COUNT, ++this.killedMonsterCount);
+        } else if (target instanceof EntityGadget gadget) {
+            Optional.ofNullable(gadget.getGadgetData())
+                .filter(data -> data.getType() == EntityType.Chest)
+                .ifPresent(data -> this.killChestCount++);
+        }
     }
 
     public void onTick() {
         // disable script for home
-        if (this.getSceneType() == SceneType.SCENE_HOME_WORLD || this.getSceneType() == SceneType.SCENE_HOME_ROOM) {
+        if (getSceneType() == SceneType.SCENE_HOME_WORLD || getSceneType() == SceneType.SCENE_HOME_ROOM) {
             finishLoading();
             return;
         }
-        if (this.getScriptManager().isInit()) {
+        if (this.scriptManager.isInit()) {
             //this.checkBlocks();
             if (tickCount % 2 == 0) {
                 checkGroups();
             }
         } else {
             // TEMPORARY
-            this.checkSpawns();
+            checkSpawns();
         }
         // Triggers
         this.scriptManager.checkRegions();
@@ -493,8 +462,6 @@ public class Scene {
         val sceneTime = getSceneTimeSeconds();
         getEntities().forEach((eid, e) -> e.onTick(sceneTime));
 
-        blossomManager.onTick();
-
         checkNpcGroup();
         finishLoading();
         checkPlayerRespawn();
@@ -505,22 +472,12 @@ public class Scene {
     }
 
     private void checkPlayerRespawn() {
-        if(getScriptManager().getConfig() == null){
-            return;
-        }
-        val diePos = getScriptManager().getConfig().die_y;
-        players.forEach(player -> {
-            //Check if we need a respawn
-            if (diePos >= player.getPosition().getY()) {
-                //Respawn the player
-                respawnPlayer(player);
-            }
-        });
-        getEntities().forEach((eid, e) -> {
-            if(diePos >= e.getPosition().getY()){
-                killEntity(e);
-            }
-        });
+        if (this.scriptManager.getConfig() == null) return;
+
+        val diePos = this.scriptManager.getConfig().die_y;
+        // Check if we need a respawn
+        this.players.stream().filter(p -> diePos >= p.getPosition().getY()).forEach(this::respawnPlayer);
+        this.entities.values().stream().filter(e -> diePos >= e.getPosition().getY()).forEach(this::killEntity);
     }
 
     public Position getDefaultLocation(Player player) {
@@ -549,18 +506,18 @@ public class Scene {
         player.getTeamManager().onAvatarDieDamage();
 
         // todo should probably respawn the player at the last valid location
-        val targetPos = getRespawnLocation(player);
-        val targetRot = getRespawnRotation(player);
-        val teleportProps = TeleportProperties.builder()
+        return this.world.transferPlayerToScene(player, TeleportProperties.builder()
             .sceneId(getId())
-            .teleportTo(targetPos)
-            .teleportRot(targetRot)
+            .prevSceneId(getId())
+            .prevPos(player.getPosition())
+            .teleportTo(getRespawnLocation(player))
+            .teleportRot(getRespawnRotation(player))
             .teleportType(PlayerTeleportEvent.TeleportType.INTERNAL)
+            .worldType(Optional.ofNullable(this.dungeonManager).map(data -> 13).orElse(14))
             .enterType(EnterTypeOuterClass.EnterType.ENTER_TYPE_GOTO)
-            .enterReason(dungeonManager != null ? EnterReason.DungeonReviveOnWaypoint : EnterReason.Revival);
-
-
-        return getWorld().transferPlayerToScene(player, teleportProps.build());
+            .dungeonId(Optional.ofNullable(this.dungeonManager).map(DungeonManager::getDungeonData).map(DungeonData::getId).orElse(0))
+            .enterReason(this.dungeonManager != null ? EnterReason.DungeonReviveOnWaypoint : EnterReason.Revival)
+            .build());
     }
 
     public void finishLoading() {
@@ -582,8 +539,8 @@ public class Scene {
 
     public int getEntityLevel(int baseLevel, int worldLevelOverride) {
         int level = worldLevelOverride > 0 ? worldLevelOverride + baseLevel - 22 : baseLevel;
-        level = level >= 100 ? 100 : level;
-        level = level <= 0 ? 1 : level;
+        level = Math.min(level, 100);
+        level = Math.max(level, 1);
 
         return level;
     }
@@ -600,7 +557,7 @@ public class Scene {
             .map(SceneNpcBornEntry::getGroupId)
             .toList();
 
-        if (toUnload.size() > 0) {
+        if (!toUnload.isEmpty()) {
             broadcastPacket(new PacketGroupUnloadNotify(toUnload));
             Grasscutter.getLogger().debug("Unload NPC Group {}", toUnload);
         }
@@ -637,9 +594,9 @@ public class Scene {
         // Todo
         List<GameEntity> toAdd = new ArrayList<>();
         List<GameEntity> toRemove = new ArrayList<>();
-        var spawnedEntities = this.getSpawnedEntities();
+        var spawnedEntities = this.spawnedEntities;
         for (SpawnDataEntry entry : visible) {
-            // If spawn entry is in our view and hasnt been spawned/killed yet, we should spawn it
+            // If spawn entry is in our view and hasn't been spawned/killed yet, we should spawn it
             if (!spawnedEntities.contains(entry) && !this.getDeadSpawnedEntities().contains(entry)) {
                 // Entity object holder
                 GameEntity entity = null;
@@ -675,7 +632,6 @@ public class Scene {
                     gadget.setFightProperty(FightProperty.FIGHT_PROP_MAX_HP, Float.POSITIVE_INFINITY);
 
                     entity = gadget;
-                    blossomManager.initBlossom(gadget);
                 }
 
                 if (entity == null) continue;
@@ -694,14 +650,13 @@ public class Scene {
             }
         }
 
-        if (toAdd.size() > 0) {
-            toAdd.stream().forEach(this::addEntityDirectly);
+        if (!toAdd.isEmpty()) {
+            toAdd.forEach(this::addEntityDirectly);
             this.broadcastPacket(new PacketSceneEntityAppearNotify(toAdd, VisionType.VISION_TYPE_BORN));
         }
-        if (toRemove.size() > 0) {
-            toRemove.stream().forEach(this::removeEntityDirectly);
+        if (!toRemove.isEmpty()) {
+            toRemove.forEach(this::removeEntityDirectly);
             this.broadcastPacket(new PacketSceneEntityDisappearNotify(toRemove, VisionType.VISION_TYPE_REMOVE));
-            blossomManager.recycleGadgetEntity(toRemove);
         }
     }
 
@@ -751,95 +706,83 @@ public class Scene {
         if (!toLoad.isEmpty()) this.onRegisterGroups();
     }
 
-    public int loadDynamicGroup(int group_id) {
-        SceneGroup group = getScriptManager().getGroupById(group_id);
-        if(group == null || getScriptManager().getGroupInstanceById(group_id) != null) return -1; //Group not found or already instanced
-
-        onLoadGroup(new ArrayList<>(List.of(group)));
-
-        if(GameData.getGroupReplacements().containsKey(group_id)) onRegisterGroups();
-
-        SceneGroupInstance instance = getScriptManager().getGroupInstanceById(group_id);
-        if (instance != null)
-            return instance.getActiveSuiteId();
-
-        return -1;
+    /**
+     * Load specific (dynamic loaded) group
+     * don't load the group if it was replaced by other groups, TODO should probably log the failed loading reason
+     */
+    public int loadDynamicGroup(int groupId) {
+        return this.scriptManager.getGroupInstanceById(groupId) != null || this.replacedGroup.contains(groupId) ? -1 :
+            Optional.ofNullable(this.scriptManager.getGroupById(groupId))
+                .map(group -> group.init_config).map(config -> config.suite).orElse(-1);
     }
 
     public boolean unregisterDynamicGroup(int groupId){
-        SceneGroup group = getScriptManager().getGroupById(groupId);
+        val group = this.scriptManager.getGroupById(groupId);
         if(group == null) return false;
 
-        SceneBlock block = getScriptManager().getBlocks().get(group.block_id);
+        val block = this.scriptManager.getBlocks().get(group.block_id);
         unloadGroup(block, groupId);
+
+        val toRestore = Optional.ofNullable(block.groups.get(groupId)).map(g -> g.getReplaceableGroups(block.groups.values()))
+            .stream().flatMap(List::stream).filter(replacement -> this.replacedGroup.remove(replacement.id)).toList();
+        if (!toRestore.isEmpty()) {
+            onLoadGroup(toRestore);
+            Grasscutter.getLogger().info("Unregistered group: {}", groupId);
+            Grasscutter.getLogger().info("Replaced groups: {}", this.replacedGroup);
+        }
         return true;
     }
 
+    /**
+     * Check if a spawning group(1) will replace other groups(2). If so, unload groups(2)
+     */
     public void onRegisterGroups() {
-        Set<SceneGroup> sceneGroups = this.loadedGroups;
-        Map<Integer, SceneGroup> sceneGroupMap = sceneGroups.stream().collect(Collectors.toMap(item -> item.id, item -> item));
-        List<Integer> sceneGroupsIds = sceneGroups.stream()
-            .map(group -> group.id)
-            .toList();
-        List<Integer> dynamicGroups = sceneGroups.stream()
-                .filter(group -> group.dynamic_load)
-                .map(group -> group.id)
-                .toList();
+        // Create the graph
+        val groupList = new HashSet<Integer>();
+        val nodes = GameData.getGroupReplacements().values().stream()
+            .filter(replacement -> this.loadedGroups.stream().filter(group -> group.dynamic_load)
+                .anyMatch(group -> group.id == replacement.id)) // dynamic groups
+//            .filter(replacement -> getReplacedGroup().stream().noneMatch(replacement.replace_groups::contains))
+            .peek(replacement -> Grasscutter.getLogger().info("Graph ordering replacement {}", replacement))
+            .peek(replacement -> groupList.add(replacement.id))
+            .peek(replacement -> groupList.addAll(replacement.replace_groups))
+            .map(replacement -> replacement.replace_groups
+                .stream().map(id -> new KahnsSort.Node(replacement.id, id)).toList())
+            .flatMap(List::stream)
+            .collect(Collectors.toSet());
 
-        //Create the graph
-        List<KahnsSort.Node> nodes = new ArrayList<>();
-        List<Integer> groupList = new ArrayList<>();
-        GameData.getGroupReplacements().values().stream().filter(replacement -> dynamicGroups.contains(replacement.id)).forEach(replacement -> {
-            Grasscutter.getLogger().info("Graph ordering replacement {}", replacement);
-            replacement.replace_groups.forEach(group -> {
-                nodes.add(new KahnsSort.Node(replacement.id, group));
-                if(!groupList.contains(group)) groupList.add(group);
-            });
-            if(!groupList.contains(replacement.id)) groupList.add(replacement.id);
-        });
-
-        KahnsSort.Graph graph = new KahnsSort.Graph(nodes, groupList);
-        List<Integer> dynamicGroupsOrdered = KahnsSort.doSort(graph);
-
-        //Now we can start unloading and loading groups :D
-        dynamicGroupsOrdered.forEach(group -> {
-            if(GameData.getGroupReplacements().containsKey((int)group)) { //isGroupJoinReplacement
-                GroupReplacementData data = GameData.getGroupReplacements().get((int)group);
-                SceneGroup sceneGroupReplacement = this.loadedGroups.stream().filter(g -> g.id == group).findFirst().get();
-                if(sceneGroupReplacement != null && sceneGroupReplacement.is_replaceable != null) {
-                    Iterator<Integer> it = data.replace_groups.iterator();
-                    while(it.hasNext()) {
-                        int replace_group = it.next();
-                        if(sceneGroupsIds.contains(replace_group)) {
-                            //Check if we can replace this group
-                            SceneGroup sceneGroup = sceneGroupMap.get(replace_group);
-                            if(sceneGroup != null && sceneGroup.is_replaceable != null &&
-                                ((sceneGroup.is_replaceable.value &&
-                                sceneGroup.is_replaceable.version <= sceneGroupReplacement.is_replaceable.version) || sceneGroup.is_replaceable.new_bin_only)) {
-                                unloadGroup(scriptManager.getBlocks().get(sceneGroup.block_id), replace_group);
-                                it.remove();
-                                Grasscutter.getLogger().info("Graph ordering: unloaded {}", replace_group);
-                            }
-                        }
-                    }
-                }
-            }
-        });
+        // Now we can start unloading and loading groups :D
+        Optional.ofNullable(KahnsSort.doSort(new KahnsSort.Graph(
+                nodes.stream().toList(), groupList.stream().toList()))).stream().flatMap(List::stream)
+            .map(groupId -> this.loadedGroups.stream().filter(g -> g.id == groupId).findFirst()) // isGroupJoinReplacement
+            .filter(Optional::isPresent).map(Optional::get)
+            .map(targetGroup -> targetGroup.getReplaceableGroups(this.loadedGroups))
+            .flatMap(List::stream)
+            .filter(replacement -> !this.replacedGroup.contains(replacement.id))
+            .peek(replacement -> this.replacedGroup.add(replacement.id))
+            .peek(replacement -> Grasscutter.getLogger().info("Graph ordering: unloaded {}", replacement.id))
+            .peek(replacement -> Grasscutter.getLogger().info("Replaced groups: {}", this.replacedGroup))
+            .forEach(replacement -> unloadGroup(this.scriptManager.getBlocks().get(replacement.block_id), replacement.id));
     }
 
     public void loadTriggerFromGroup(SceneGroup group, String triggerName) {
         //Load triggers and regions
-        getScriptManager().registerTrigger(group.triggers.values().stream().filter(p -> p.getName().contains(triggerName)).toList());
-        group.regions.values().stream().filter(q -> q.config_id == Integer.parseInt(triggerName.substring(13))).map(region -> new EntityRegion(this, region))
-            .forEach(getScriptManager()::registerRegion);
+        this.scriptManager.registerTrigger(group.triggers.values().stream().filter(p -> p.getName().contains(triggerName)).toList());
+        group.regions.values().stream().filter(q -> q.config_id == Integer.parseInt(triggerName.substring(13)))
+            .map(region -> new EntityRegion(this, region)).forEach(this.scriptManager::registerRegion);
     }
 
+    /**
+     * Load specific group(s), used when this
+     * 1) group is came into player's sight (or visible)
+     * 2) group is being registered
+     */
     public void onLoadGroup(List<SceneGroup> groups) {
         if (groups == null || groups.isEmpty()) {
             return;
         }
         for (SceneGroup group : groups) {
-            if(this.loadedGroups.contains(group)) continue;
+            if (group == null || this.loadedGroups.contains(group)) continue;
 
             // We load the script files for the groups here
             this.getScriptManager().loadGroupFromScript(group);
@@ -850,31 +793,16 @@ public class Scene {
         var entities = new ArrayList<GameEntity>();
         var entitiesBorn = new ArrayList<GameEntity>();
         for (SceneGroup group : groups) {
-            if(this.loadedGroups.contains(group)) continue;
+            if (this.loadedGroups.contains(group)) continue;
+            if (group.init_config == null) continue;
 
-            if (group.init_config == null) {
-                continue;
-            }
-
-            SceneGroupInstance groupInstance = this.getScriptManager().getGroupInstanceById(group.id);
-            var cachedInstance = this.getScriptManager().getCachedGroupInstanceById(group.id);
+            SceneGroupInstance groupInstance = this.scriptManager.getGroupInstanceById(group.id);
+            var cachedInstance = this.scriptManager.getCachedGroupInstanceById(group.id);
             if(cachedInstance != null) {
                 cachedInstance.setLuaGroup(group);
                 groupInstance = cachedInstance;
             }
-
-            // Load garbages
-            /*List<SceneGadget> garbageGadgets = group.getGarbageGadgets();
-
-            if (garbageGadgets != null) {
-                entities.addAll(garbageGadgets.stream().map(g -> scriptManager.createGadget(group.id, group.block_id, g))
-                    .filter(Objects::nonNull)
-                    .toList());
-            }*/
-
-            // Load suites
-            //int suite = group.findInitSuiteIndex(0);
-            this.getScriptManager().refreshGroup(groupInstance, 0, false, entitiesBorn); //This is what the official server does
+            this.scriptManager.refreshGroup(groupInstance, 0, false, entitiesBorn); //This is what the official server does
 
             this.loadedGroups.add(group);
             this.loadedGroupIds.add(group.id);
@@ -886,16 +814,18 @@ public class Scene {
         Grasscutter.getLogger().info("Scene {} loaded {} group(s)", this.getId(), groups.size());
     }
 
-    public void unloadGroup(SceneBlock block, int group_id) {
-        List<GameEntity> toRemove = this.getEntities().values().stream()
-                .filter(e -> e != null && (e.getBlockId() == block.id && e.getGroupId() == group_id)).toList();
+    /**
+     * Remove specific group, used when this
+     * 1) group is not within player's sight (or not visible)
+     * 2) group is replaced by other groups
+     * 3) group is being unregistered
+     */
+    private void unloadGroup(SceneBlock block, int groupId) {
+        removeEntities(this.entities.values().stream().filter(Objects::nonNull).filter(e ->
+            e.getBlockId() == block.id && e.getGroupId() == groupId).toList(), VisionType.VISION_TYPE_REMOVE);
 
-        if (toRemove.size() > 0) {
-            toRemove.forEach(this::removeEntityDirectly);
-            this.broadcastPacket(new PacketSceneEntityDisappearNotify(toRemove, VisionType.VISION_TYPE_REMOVE));
-        }
 
-        SceneGroup group = block.groups.get(group_id);
+        SceneGroup group = block.groups.get(groupId);
         if (group.triggers != null) {
             group.triggers.values().forEach(getScriptManager()::deregisterTrigger);
         }
@@ -904,7 +834,7 @@ public class Scene {
         }
 
         this.loadedGroups.remove(group);
-        broadcastPacket(new PacketGroupUnloadNotify(List.of(group_id)));
+        broadcastPacket(new PacketGroupUnloadNotify(List.of(groupId)));
         scriptManager.unregisterGroup(group);
     }
 
@@ -912,79 +842,61 @@ public class Scene {
 
     public void onPlayerCreateGadget(EntityClientGadget gadget) {
         // Directly add
-        this.addEntityDirectly(gadget);
+        addEntityDirectly(gadget);
 
         // Add to owner's gadget list
         gadget.getOwner().getTeamManager().getGadgets().add(gadget);
 
         // Optimization
-        if (this.getPlayerCount() == 1 && this.getPlayers().get(0) == gadget.getOwner()) {
-            return;
+        if (this.players.stream().anyMatch(p -> p != gadget.getOwner())) { // if there is other players in scene
+            broadcastPacketToOthers(gadget.getOwner(), new PacketSceneEntityAppearNotify(gadget));
         }
-
-        this.broadcastPacketToOthers(gadget.getOwner(), new PacketSceneEntityAppearNotify(gadget));
     }
 
     public void onPlayerDestroyGadget(int entityId) {
-        GameEntity entity = getEntities().get(entityId);
-
-        if (!(entity instanceof EntityClientGadget gadget)) {
-            return;
-        }
+        if (!(this.entities.get(entityId) instanceof EntityClientGadget gadget)) return;
 
         // Get and remove entity
-        this.removeEntityDirectly(gadget);
+        removeEntityDirectly(gadget);
 
         // Remove from owner's gadget list
         gadget.getOwner().getTeamManager().getGadgets().remove(gadget);
 
         // Optimization
-        if (this.getPlayerCount() == 1 && this.getPlayers().get(0) == gadget.getOwner()) {
-            return;
+        if (this.players.stream().anyMatch(p -> p != gadget.getOwner())) { // if there is other players in scene
+            broadcastPacketToOthers(gadget.getOwner(), new PacketSceneEntityDisappearNotify(gadget, VisionType.VISION_TYPE_DIE));
         }
-
-        this.broadcastPacketToOthers(gadget.getOwner(), new PacketSceneEntityDisappearNotify(gadget, VisionType.VISION_TYPE_DIE));
     }
 
     // Broadcasting
 
+    /**
+     * Send packets to all players in world
+     */
     public void broadcastPacket(BasePacket packet) {
         // Send to all players - might have to check if player has been sent data packets
-        for (Player player : this.getPlayers()) {
-            player.getSession().send(packet);
-        }
+        broadcastPacketToOthers(null, packet);
     }
 
+    /**
+     * Send packets to all players in world excluding one, which normally is the owner
+     */
     public void broadcastPacketToOthers(Player excludedPlayer, BasePacket packet) {
-        // Optimization
-        if (this.getPlayerCount() == 1 && this.getPlayers().get(0) == excludedPlayer) {
-            return;
-        }
-        // Send to all players - might have to check if player has been sent data packets
-        for (Player player : this.getPlayers()) {
-            if (player == excludedPlayer) {
-                continue;
-            }
-            // Send
-            player.getSession().send(packet);
-        }
+        this.players.stream().filter(p -> p != excludedPlayer).forEach(p -> p.sendPacket(packet));
     }
 
     public void addItemEntity(int itemId, int amount, GameEntity bornForm) {
-        ItemData itemData = GameData.getItemDataMap().get(itemId);
-        if (itemData == null) {
-            return;
-        }
+        val itemData = GameData.getItemDataMap().get(itemId);
+        if (itemData == null) return;
+
         if (itemData.isEquip()) {
-            float range = (1.5f + (.05f * amount));
+            val range = (1.5f + (.05f * amount));
             for (int i = 0; i < amount; i++) {
-                Position pos = bornForm.getPosition().nearby2d(range).addZ(.9f);  // Why Z?
-                EntityItem entity = new EntityItem(this, null, itemData, pos, 1);
-                addEntity(entity);
+                val pos = bornForm.getPosition().nearby2d(range).addZ(.9f);  // Why Z?
+                addEntity(new EntityItem(this, null, itemData, pos, 1));
             }
         } else {
-            EntityItem entity = new EntityItem(this, null, itemData, bornForm.getPosition().clone().addZ(.9f), amount);  // Why Z?
-            addEntity(entity);
+            addEntity(new EntityItem(this, null, itemData, bornForm.getPosition().clone().addZ(.9f), amount));
         }
     }
 
@@ -993,41 +905,31 @@ public class Scene {
     }
 
     private List<SceneNpcBornEntry> loadNpcForPlayer(Player player) {
-        var pos = player.getPosition();
-        var data = GameData.getSceneNpcBornData().get(getId());
-        if (data == null) {
-            return List.of();
-        }
+        val pos = player.getPosition();
+        val data = GameData.getSceneNpcBornData().get(getId());
+        if (data == null) return List.of();
 
-        var npcList = SceneIndexManager.queryNeighbors(data.getIndex(), pos.toDoubleArray(),
+        val npcList = SceneIndexManager.queryNeighbors(data.getIndex(), pos.toDoubleArray(),
             Grasscutter.getConfig().server.game.loadEntitiesForPlayerRange);
 
-        var sceneNpcBornEntries = npcList.stream()
-            .filter(i -> !this.npcBornEntrySet.contains(i))
-            .toList();
+        val sceneNpcBornEntries = npcList.stream().filter(i -> !this.npcBornEntrySet.contains(i)).toList();
 
-        if (sceneNpcBornEntries.size() > 0) {
-            this.broadcastPacket(new PacketGroupSuiteNotify(sceneNpcBornEntries));
+        if (!sceneNpcBornEntries.isEmpty()) {
+            broadcastPacket(new PacketGroupSuiteNotify(sceneNpcBornEntries));
             Grasscutter.getLogger().debug("Loaded Npc Group Suite {}", sceneNpcBornEntries);
         }
         return npcList;
     }
 
     public void loadGroupForQuest(List<QuestGroupSuite> sceneGroupSuite) {
-        if (!scriptManager.isInit()) {
-            return;
-        }
+        if (!this.scriptManager.isInit()) return;
 
         sceneGroupSuite.forEach(i -> {
             var group = scriptManager.getGroupById(i.getGroup());
-            if (group == null) {
-                return;
-            }
+            if (group == null) return;
             var groupInstance = scriptManager.getGroupInstanceById(i.getGroup());
             var suite = group.getSuiteByIndex(i.getSuite());
-            if (suite == null || groupInstance == null) {
-                return;
-            }
+            if (suite == null || groupInstance == null) return;
             scriptManager.refreshGroup(groupInstance, i.getSuite(), false);
         });
     }
@@ -1044,21 +946,15 @@ public class Scene {
 
     public void selectWorktopOptionWith(SelectWorktopOptionReqOuterClass.SelectWorktopOptionReq req) {
         GameEntity entity = getEntityById(req.getGadgetEntityId());
-        if (entity == null) {
-            return;
-        }
+        if (entity == null) return;
         // Handle
-        if (entity instanceof EntityGadget gadget) {
-            if (gadget.getContent() instanceof GadgetWorktop worktop) {
-                boolean shouldDelete = worktop.onSelectWorktopOption(req);
-                if (shouldDelete) {
-                    entity.getScene().removeEntity(entity, VisionType.VISION_TYPE_REMOVE);
-                }
-            }
+        if (entity instanceof EntityGadget gadget && gadget.getContent() instanceof GadgetWorktop worktop) {
+            boolean shouldDelete = worktop.onSelectWorktopOption(req);
+            if (shouldDelete) entity.getScene().removeEntity(entity, VisionType.VISION_TYPE_REMOVE);
         }
     }
 
     public void saveGroups() {
-        this.getScriptManager().getCachedGroupInstances().values().forEach(SceneGroupInstance::save);
+        this.scriptManager.getCachedGroupInstances().values().forEach(SceneGroupInstance::save);
     }
 }
